# my-text-editor

./: README.md
editor/: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  test.txt
editor/.cache/clangd/index/: main.cpp.A7D63A702FAD0C7A.idx  term.cxx.F2B2FC9E13922867.idx
editor/src/: editor.cpp  editor.h  io.cpp  io.h  keyboard.cpp  keyboard.h  macros.h  main.c  main.cpp  piece-table.h  rust.h  term.cpp  term.h
